--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.1.1",
+    "ws": "^7.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -39,6 +41,8 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/redux-thunk": "^2.1.0",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/ws": "^7.4.4",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
     "prettier": "^2.3.0",
