--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^7.2.3",
     "react-native": "~0.63.4",
+    "react-native-dropdown-picker": "^5.1.21",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.1.0",
