--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^3.1.1",
+    "react-native-toast-message": "^1.4.9",
     "react-native-unimodules": "~0.12.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
